<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.example.android.tabletenniscounter.MainActivity">

    <RelativeLayout
        style="@style/background_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/score_label"
            style="@style/score_label"
            android:text="@string/score_label" />

        <LinearLayout
            android:id="@+id/mainLayout1"
            style="@style/mainLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/team_a_field"
                    style="@style/team_a_field"
                    android:text="@string/teamA_name" />

                <TextView
                    android:id="@+id/team_a_score"
                    style="@style/team_a_score"
                    android:text="@string/team_score" />

            </LinearLayout>

            <View
                style="@style/view1"
                android:layout_width="1dp"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/team_b_field"
                    style="@style/team_b_field"
                    android:text="@string/teamB_name" />

                <TextView
                    android:id="@+id/team_b_score"
                    style="@style/team_b_score"
                    android:text="@string/team_score" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/set_label"
            style="@style/set_label"
            android:layout_below="@id/mainLayout1"
            android:text="@string/set_label" />

        <LinearLayout
            android:id="@+id/mainLayout2"
            style="@style/mainLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/set_label"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/team_a_set"
                        style="@style/team_a_set"
                        android:text="@string/team_score" />

                </LinearLayout>

                <Button
                    android:id="@+id/button1"
                    style="@style/button1"
                    android:onClick="addOnePointForTeamA"
                    android:text="@string/team_point" />

            </LinearLayout>

            <View
                style="@style/view2"
                android:layout_width="1dp"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <TextView
                        android:id="@+id/team_b_set"
                        style="@style/team_b_set"
                        android:text="@string/team_score" />

                </LinearLayout>

                <Button
                    android:id="@+id/button2"
                    style="@style/button2"
                    android:onClick="addOnePointForTeamB"
                    android:text="@string/team_point" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/fault_label"
            style="@style/fault_label"
            android:layout_below="@id/mainLayout2"
            android:text="@string/fault_label" />

        <LinearLayout
            android:id="@+id/mainLayout3"
            style="@style/mainLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/fault_label"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/team_a_fault"
                    style="@style/team_a_fault"
                    android:text="@string/team_score" />

                <Button
                    android:id="@+id/button3"
                    style="@style/button3"
                    android:onClick="addOneFaultForTeamA"
                    android:text="@string/team_fault" />

            </LinearLayout>

            <View
                style="@style/view3"
                android:layout_width="1dp"
                android:layout_height="match_parent" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/team_b_fault"
                    style="@style/team_b_fault"
                    android:text="@string/team_score" />

                <Button
                    android:id="@+id/button4"
                    style="@style/button4"
                    android:onClick="addOneFaultForTeamB"
                    android:text="@string/team_fault" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/reset"
            style="@style/resetButton"
            android:layout_below="@id/mainLayout3"
            android:onClick="resetTeams"
            android:text="@string/reset_text" />

    </RelativeLayout>
</ScrollView>